--- a/stylesheets/001_logo_icons.module.less
+++ b/stylesheets/001_logo_icons.module.less
@@ -1,6 +1,12 @@
 .pure-header{
-    color: @headings-color;
-    font-family: @headings-font-family;
+    // color: @headings-color;
+    // font-family: @headings-font-family;
+    color:#36454F;
+    font-family: 'Abel';
+    font-style: normal;
+    font-weight: bold;
+    src: url('https://fonts.gstatic.com/s/abel/v18/MwQ5bhbm2POE2V9BPQ.woff2') format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 .pure-g-1{
